--- a/lld/solid_principles/pom.xml
+++ b/lld/solid_principles/pom.xml
@@ -2,18 +2,15 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+    <parent>
+        <artifactId>system_design</artifactId>
+        <groupId>com.systemdesign</groupId>
+        <version>1.0-SNAPSHOT</version>
+        <relativePath>../../pom.xml</relativePath>
+    </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>com.systemdesign</groupId>
-    <artifactId>system_design</artifactId>
-    <packaging>pom</packaging>
-    <version>1.0-SNAPSHOT</version>
-    <modules>
-        <module>lld</module>
-        <module>hld</module>
-        <module>lld/solid_principles</module>
-        <module>lld/strategy_design_pattern</module>
-    </modules>
+    <artifactId>solid_principles</artifactId>
 
     <properties>
         <maven.compiler.source>18</maven.compiler.source>
