--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,7 @@
         <module>lld/tic_tac_toe</module>
         <module>lld/split_wise_design</module>
         <module>lld/logging_system</module>
+        <module>lld/Elevator_design</module>
     </modules>
 
     <properties>
