--- a/pom.xml
+++ b/pom.xml
@@ -30,6 +30,7 @@
         <module>lld/Cache</module>
         <module>lld/stock_exchange</module>
         <module>lld/book_my_show</module>
+        <module>lld/RedBus</module>
     </modules>
 
     <properties>
