--- a/lld/Rate_Limiter/pom.xml
+++ b/lld/Rate_Limiter/pom.xml
@@ -10,7 +10,7 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>RateLiimiter</artifactId>
+    <artifactId>Rate_Limiter</artifactId>
 
     <properties>
         <maven.compiler.source>18</maven.compiler.source>
